# Ts-Rx

./: .env.example  .env.production.example  .gitignore  Dockerfile.frontend  PLAN.md  README.md  SETUP.md  docker-compose.tailscale.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.sh  vite.config.ts  vite.extension.config.ts
analysis_agent/: Dockerfile  analyzer.py  auth.py  config.py  database.py  limiter.py  main.py  models.py  notifier.py  orchestrator.py  schemas.py  service_kb.py  specialist.py  tailscale_client.py  worker.py
analysis_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
connector/: tsrx-agent.sh
extension/: content.js  index.html  manifest.json
extension/assets/: index-D-pSXrkG.css  index-DYZRKu1Q.js
nginx/: nginx-tailscale.conf  nginx.conf  spa.conf
src/: App.tsx  index.css
src/components/: Dashboard.tsx  DeviceHealthGrid.tsx  Header.tsx  IncidentCard.tsx  LoginPage.tsx  ReviewModal.tsx  ServicesTab.tsx  SettingsTab.tsx
src/lib/: api.ts  statusInfo.ts  types.ts
test/: agentic-demo.html
tests/: test_analyzer_markdown.py
