[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-agent"
version = "0.1.0"
description = "Read-only incident analysis agent for hackathon triage"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "bcrypt>=4.0.0",
  "python-jose[cryptography]>=3.3.0",
  "redis[asyncio]>=5.0.0",
  "aiosmtplib>=3.0.0",
  "websockets>=12.0",
  "email-validator>=2.0.0",
  "aiosqlite>=0.19.0"
]

[tool.setuptools]
packages = ["analysis_agent"]
